Add in Qs3Bucket aparams

--- a/templates/solace-aws-master.template
+++ b/templates/solace-aws-master.template
@@ -26,6 +26,15 @@
                         "LinuxOSAMI",
                         "BootDiskSize"
                     ]
+                },
+                {
+                    "Label": {
+                        "default": "AWS Quick Start Configuration"
+                    },
+                    "Parameters": [
+                        "QSS3BucketName",
+                        "QSS3KeyPrefix"
+                    ]
                 }
             ],
             "ParameterLabels": {
