--- a/templates/solace-aws.template
+++ b/templates/solace-aws.template
@@ -248,7 +248,7 @@
             "Type": "String"
         }
     },
-        "Mappings": {
+    "Mappings": {
         "AWSInfoRegionMap": {
             "ap-northeast-1": {
                 "Partition": "aws",
@@ -306,6 +306,14 @@
                 "Partition": "aws",
                 "QuickStartS3URL": "https://s3.amazonaws.com"
             }
+        }
+    },
+    "Conditions": {
+        "EnableWaitConditions": {
+            "Fn::Equals": [
+                "1",
+                "1"
+            ]
         }
     },
     "Resources": {
