--- a/templates/solace-aws-master.template
+++ b/templates/solace-aws-master.template
@@ -13,6 +13,7 @@
                         "VPCCIDR",
                         "PublicSubnet1CIDR",
                         "PublicSubnet2CIDR",
+                        "PublicSubnet3CIDR",
                         "RemoteAccessCIDR",
                         "SSHAccessCIDR"
                     ]
@@ -94,6 +95,9 @@
                 "PublicSubnet2CIDR": {
                     "default": "Public Subnet 2 CIDR"
                 },
+                "PublicSubnet3CIDR": {
+                    "default": "Public Subnet 3 CIDR"
+                },
                 "RemoteAccessCIDR": {
                     "default": "Allowed External Access CIDR"
                 },
@@ -174,14 +178,21 @@
         "PublicSubnet1CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.128.0/20",
+            "Default": "10.0.128.0/24",
             "Description": "CIDR Block for the public DMZ subnet 1 located in Availability Zone 1",
             "Type": "String"
         },
         "PublicSubnet2CIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.144.0/20",
+            "Default": "10.0.129.0/24",
+            "Description": "CIDR Block for the public DMZ subnet 2 located in Availability Zone 2",
+            "Type": "String"
+        },
+        "PublicSubnet3CIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
+            "Default": "10.0.130.0/24",
             "Description": "CIDR Block for the public DMZ subnet 2 located in Availability Zone 2",
             "Type": "String"
         },
@@ -200,7 +211,7 @@
         "VPCCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
-            "Default": "10.0.0.0/16",
+            "Default": "10.0.128.0/20",
             "Description": "CIDR Block for the VPC",
             "Type": "String"
         },
@@ -311,6 +322,12 @@
         }
     },
     "Resources": {
+        "CloudFormationLogs": {
+        "Type": "AWS::Logs::LogGroup",
+        "Properties": {
+            "RetentionInDays": 7
+        }
+        },
         "VPCStack": {
             "Type": "AWS::CloudFormation::Stack",
             "Properties": {
@@ -351,12 +368,15 @@
                     "KeyPairName": {
                         "Ref": "KeyPairName"
                     },
-                    "NumberOfAZs": "2",
+                    "NumberOfAZs": "3",
                     "PublicSubnet1CIDR": {
                         "Ref": "PublicSubnet1CIDR"
                     },
                     "PublicSubnet2CIDR": {
                         "Ref": "PublicSubnet2CIDR"
+                    },
+                    "PublicSubnet3CIDR": {
+                        "Ref": "PublicSubnet3CIDR"
                     },
                     "VPCCIDR": {
                         "Ref": "VPCCIDR"
