--- a/templates/nodegroup.template
+++ b/templates/nodegroup.template
@@ -28,8 +28,8 @@
                 "Ubuntu-Server-16.04-LTS-HVM",
                 "Amazon-Linux-HVM"
             ],
-            "ConstraintDescription": "Supported versions of Linux AMIs for Confluent deployments",
-            "Default": "CentOS-7-HVM",
+            "ConstraintDescription": "Supported versions of Linux AMIs for Solace Message Routers",
+            "Default": "Amazon-Linux-HVM",
             "Description": "Operating system AMI for cluster instances",
             "Type": "String"
         },
@@ -93,12 +93,12 @@
         "QSS3KeyPrefix": {
             "AllowedPattern": "^[0-9a-zA-Z-]+(/[0-9a-zA-Z-]+)*$",
             "ConstraintDescription": "Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.",
-            "Default": "confluent/kafka/latest",
+            "Default": "solace-aws-ha-quickstart/latest",
             "Description": "S3 key prefix for the Quick Start assets. Quick Start key prefix can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/). It cannot start or end with forward slash (/) because they are automatically appended.",
             "Type": "String"
         },
         "SubnetID": {
-            "Description": "Comma separated list of VPC subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8); VPC must exist with proper configuration for Confluent cluster access (internal and external)and the subnets must be in the same VPC as the security groups",
+            "Description": "Comma separated list of VPC subnet IDs for the cluster deployment (e.g. subnet-4b8d329f,subnet-bd73afc8); VPC must exist with proper configuration for Solacet cluster access (internal and external)and the subnets must be in the same VPC as the security groups",
             "Type": "List<AWS::EC2::Subnet::Id>"
         }
     },
@@ -310,14 +310,6 @@
                 },
                 "DesiredCapacity": {
                     "Ref": "NumNodes"
-                },
-                "CreationPolicy": {
-                    "ResourceSignal": {
-                        "Count": {
-                            "Ref": "NumNodes"
-                        },
-                        "Timeout": "PT30M"
-                    }
                 }
             }
         },
@@ -325,12 +317,9 @@
             "Type": "AWS::AutoScaling::LaunchConfiguration",
             "Metadata": {
                 "AWS::CloudFormation::Init": {
-                    "configSets" : {
-                        "install_all" : [ "install_cfn", "install_app", "install_logs" ]
-                    },                   
-                    "config": {
+                    "config" : {
                         "files": {
-                            "/tmp/sbin/gen-cluster-hosts.sh": {
+                            "/tmp/gen-cluster-hosts.sh": {
                                 "source": {
                                     "Fn::Join": [
                                         "/",
@@ -358,7 +347,7 @@
                                 "owner": "root",
                                 "group": "root"
                             },
-                            "/tmp/sbin/wait-for-child-resource.sh": {
+                            "/tmp/wait-for-child-resource.sh": {
                                 "source": {
                                     "Fn::Join": [
                                         "/",
@@ -386,7 +375,7 @@
                                 "owner": "root",
                                 "group": "root"
                             },
-                            "/tmp/sbin/wait-for-resource.sh": {
+                            "/tmp/wait-for-resource.sh": {
                                 "source": {
                                     "Fn::Join": [
                                         "/",
@@ -413,11 +402,7 @@
                                 "mode": "000755",
                                 "owner": "root",
                                 "group": "root"
-                            }
-                        }
-                    },
-                    "install_cfn" : {
-                        "files" : {
+                            },
                             "/etc/cfn/cfn-hup.conf" : {
                                 "content" : { "Fn::Join" : ["", [
                                 "[main]\n",
@@ -671,7 +656,7 @@
                                 },
                                 " --resource Nodes\n",
                                 "\n",
-                                "## Retrieve scripts to deploy Confluent on the instances \n",
+                                "## Retrieve scripts to deploy Solace on the instances \n",
                                 "##  cfn-init downloads everything \n",
                                 "##  and then we're off to the races \n",
                                 "cfn-init -v ",
@@ -685,7 +670,7 @@
                                     "Ref": "AWS::Region"
                                 },
                                 "\n",
-                                "AMI_SBIN=/tmp/sbin \n",
+                                "AMI_SBIN=/tmp \n",
                                 "\n",
                                 "## Wait for all nodes to come on-line\n",
                                 "$AMI_SBIN/wait-for-child-resource.sh ",
@@ -740,7 +725,7 @@
                                 "#service sshd restart\n",
                                 "\n",
                                 "## If all went well, signal success (must be done by ALL nodes in group)\n",
-                                "cfn-signal -e 0 -r 'Confluent Platform node deployment complete' '",
+                                "cfn-signal -e 0 -r 'Solace node deployment complete' '",
                                 {
                                     "Ref": "NodesReadyHandle"
                                 },
