--- a/templates/solace-aws-master.template
+++ b/templates/solace-aws-master.template
@@ -330,6 +330,7 @@
         },
         "VPCStack": {
             "Type": "AWS::CloudFormation::Stack",
+            "DeletionPolicy": "Retain",
             "Properties": {
                 "TemplateURL": {
                     "Fn::Join": [
@@ -387,6 +388,7 @@
         "SolaceStack": {
             "DependsOn": "VPCStack",
             "Type": "AWS::CloudFormation::Stack",
+            "DeletionPolicy": "Retain",
             "Properties": {
                 "TemplateURL": {
                     "Fn::Join": [
